crates/pixi_core/src/workspace/snapshots/pixi_core__workspace__tests__dependency_sets.snap
---
source: crates/pixi_core/src/workspace/mod.rs
expression: "format_dependencies(workspace.default_environment().combined_dependencies(Some(Platform::Linux64)))"
---
foo = "==1.0"
libc = "==2.12"
bar = "==1.0"
