crates/pixi_core/src/workspace/snapshots/pixi_core__workspace__tests__target_specific_tasks-3.snap
---
source: crates/pixi_core/src/workspace/mod.rs
expression: "workspace.workspace.value.tasks(Some(Platform::Linux64),\n&FeatureName::DEFAULT).unwrap()"
---
{
    TaskName(
        "test",
    ): Plain(
        TemplateString(
            "test linux",
        ),
    ),
}
